kubernetes/migration/test/be.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testcenter-backend-deployment
  namespace: tc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testcenter-backend
  template:
    metadata:
      labels:
        app: testcenter-backend
    spec:
      initContainers:
        - name: wait-for-db
          image: busybox:1.28
          command: ['sh', '-c', 'until nc -z testcenter-db 3306; do echo waiting for testcenter-db; sleep 2; done;']
      containers:
        - name: testcenter-backend-container
          image: iqbberlin/testcenter-backend:15.3.4
          env:
          - name: MYSQL_DATABASE
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: MYSQL_DATABASE
          - name: MYSQL_USER
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: MYSQL_USER
          - name: MYSQL_PASSWORD
            valueFrom:
              secretKeyRef:
                name: testcenter-secrets
                key: MYSQL_PASSWORD
          - name: MYSQL_HOST
            value: "testcenter-db"
          - name: MYSQL_PORT
            value: "3306"
          - name: PASSWORD_SALT
            valueFrom:
              secretKeyRef:
                name: testcenter-secrets
                key: PASSWORD_SALT
          - name: BROADCAST_SERVICE_ENABLED
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: BROADCAST_SERVICE_ENABLED
          - name: FILE_SERVICE_ENABLED
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: FILE_SERVICE_ENABLED
          - name: HOSTNAME
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: HOSTNAME
          - name: TLS_ENABLED
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: TLS_ENABLED
          - name: CACHE_SERVICE_INCLUDE_FILES
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: CACHE_SERVICE_INCLUDE_FILES
          - name: CACHE_SERVICE_RAM
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: CACHE_SERVICE_RAM
          - name: PORT
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: PORT
          - name: TLS_PORT
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: TLS_PORT
          - name: SKIP_READ_FILES
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: SKIP_READ_FILES
          - name: SKIP_DB_INTEGRITY
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: SKIP_DB_INTEGRITY
          - name: OVERWRITE_INSTALLATION
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: OVERWRITE_INSTALLATION
          - name: NO_SAMPLE_DATA
            valueFrom:
              configMapKeyRef:
                name: testcenter-config
                key: NO_SAMPLE_DATA
          volumeMounts:
          - name: backend-data
            mountPath: /var/www/testcenter/data
          readinessProbe:
            httpGet:
              path: /
              port: 80
            periodSeconds: 5
            timeoutSeconds: 30
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
      volumes:
        - name: backend-data
          persistentVolumeClaim:
            claimName: testcenter-backend-vo-data

---
apiVersion: v1
kind: Service
metadata:
  name: testcenter-backend-service
  namespace: tc
spec:
  selector:
    app: testcenter-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
