kubernetes/migration/test/fe.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: stripregexfe
  namespace: tc
spec:
  redirectRegex:
    regex: ^http(s?)://www\.(.*)
    replacement: http${1}://${2}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fe-deployment
  namespace: tc
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: fe-pod
  template:
    metadata:
      labels:
        app: fe-pod
    spec:
      containers:
        - name: fe-container
          image: iqbberlin/testcenter-frontend:15.3.4
          ports:
            - name: http-container
              containerPort: 80 #interner port innerhalb von cluster
---
apiVersion: v1
kind: Service
metadata:
  name: fe-service
  namespace: tc
spec:
  selector:
    app: fe-pod
  ports:
    - name: http-service
      port: 80 #interner port innerhalb von cluster
      targetPort: http-container
  type: NodePort
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: testcenter-fe-ingress
  namespace: tc
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`www.minikube-ip-defined-in-hosts.example`) || Host(`minikube-ip-defined-in-hosts.example`)
      kind: Rule
      middlewares:
        - name: securityheaders
          namespace: tc
        - name: stripregexfe
          namespace: tc
      services:
        - name: fe-service
          port: 80
